Random code cleanup